objects/Sales_Invoice_Item__c.object
<CustomObject>
    <description>Line items for Sales Invoice document.</description>
    <fields>
        <fullName>Department__c</fullName>
        <label>[Dep]Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extended_Price__c</fullName>
        <label>Extended Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>[Dep]Memo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>[Dep]Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Invoice Items</relationshipLabel>
        <relationshipName>R00N40000001bdnzEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Invoice__c</fullName>
        <label>Sales Invoice</label>
        <referenceTo>Sales_Invoice__c</referenceTo>
        <relationshipLabel>Sales Invoice Items</relationshipLabel>
        <relationshipName>R00N40000001p914EAA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>[Dep]Site</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Sales Invoice Item</label>
    <nameField>
        <label>Line No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>